# webassembly-pixel-processing

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  webpack.config.js
client/: README.md  config-overrides.js  package.json
client/src/: App.tsx
client/src/components/: Video.tsx
client/src/stores/: MediaEngine.ts  VideoManager.ts  WasmEngine.ts  use_engines.tsx  use_video_manager.tsx
client/src/utils/: config.ts
converter/: Cargo.toml  LICENSE_MIT  README.md
converter/src/: lib.rs  utils.rs
converter/src/managers/: media.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
src/: App.tsx
text-detector/: tsconfig.json
text-detector/js/components/: Video.tsx
text-detector/js/stores/: MediaEngine.ts  WasmEngine.ts
web/: Cargo.toml
web/js/: App.tsx
web/js/components/: Video.tsx
web/js/stores/: WasmEngine.ts
web/src/: lib.rs  macros.rs  rendering_engine.rs  utils.rs
web/src/managers/: media.rs  mod.rs  web_light_show.rs
web/static/: index.html
